--- a/_includes/dataCard/_template.njk
+++ b/_includes/dataCard/_template.njk
@@ -31,7 +31,7 @@
 
 {% if params.type === "performance" %}
 
-    <section class="items-center flex flex-col">
+    <section class="flex flex-col gap-8 mt-6 m-4 items-center">
         <h2 class="">{{params.title}}
         </h2>
 
@@ -99,22 +99,26 @@
                     </div>
 
                 </div>
+                {# metric container 1 #}
+                <div class="flex justify-evenly lg:flex-row flex-col">
                 {# Mobile Metric Section #}
-                <div class="mt-6">
+                <div class="w-full lg:w-1/2">
                     <h4 class="text-lg font-bold mb-3">Mobile Metrics</h4>
                     <p>Click on a metric button for additional details.</p>
+
+                    
 
                     <div class="flex flex-wrap flex-col grid-cols-1 lg:grid-cols-2 justify-items-center gap-4">
 
                         {# First Contentful Paint #}
-                        <div x-data="{ fcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <div x-data="{ fcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
                         <button
-            class="flex flex-col grid-cols-1 items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-red-600"
+            class="flex flex-col grid-cols-1 items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg hover:bg-quaternary-blue hover:text-white bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="fcp = !fcp"
             @click.outside="fcp = false"
             :aria-expanded="fcp"
             >
-                            <span class="text-xs font-medium text-gray-600 uppercase mb-1">
+                            <span class="text-xs font-medium uppercase mb-1">
                 First Contentful Paint
             </span>
 
@@ -127,24 +131,23 @@
                 x-show="fcp"
                 x-transition
                 x-cloak
-                class="mt-2 text-xs text-gray-600 text-center"
+                class="mt-2 text-xs text-black text-center"
                 @click.outside="fcp = false"
             >
                 Time until the first piece of content is rendered on screen.
             </div>
             </div>  
             
-                        
-
+                
                         {# Largest Contentful Paint #}
-                        <div x-data="{ lcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <div x-data="{ lcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer ">
                         <button
-            class="flex flex-col grid-cols-1 items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-red-600"
+            class="flex flex-col grid-cols-1 items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="lcp = !lcp"
             @click.outside="lcp = false"
             :aria-expanded="lcp"
         >
-                            <span class="text-xs font-medium text-gray-600 uppercase mb-1">
+                            <span class="text-xs font-medium uppercase mb-1">
                 Largest Contentful Paint
             </span>
 
@@ -157,20 +160,20 @@
                 x-show="lcp"
                 x-transition
                 x-cloak
-                class="mt-2 text-xs text-gray-600 text-center"
+                class="mt-2 text-xs text-black text-center"
                 @click.outside="lcp = false"
             >
                 How long it takes for the largest visible element to load.
             </div>
                         </div>
                         {# Total Blocking Time #}
-                        <div x-data="{ tbt: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <div x-data="{ tbt: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
                         <button
-            class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
+            class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="tbt = !tbt"
             :aria-expanded="tbt"
         >
-                            <span class="text-xs font-medium text-gray-600 uppercase mb-1">
+                            <span class="text-xs font-medium uppercase mb-1">
                 Total Blocking Time
             </span>
                             <span class="text-2xl font-bold">
@@ -182,21 +185,21 @@
                 x-show="tbt"
                 x-transition
                 x-cloak
-                class="mt-2 text-xs text-gray-600 text-center"
+                class="mt-2 text-xs text-black text-center"
                 @click.outside="tbt = false"
             >
                 How long it takes for the largest visible element to load.
             </div>
                         </div>
                         {# Cumulative Layout Shift #}
-                        <div x-data="{ cls: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <div x-data="{ cls: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
                         <button
-            class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
+            class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="cls = !cls"
             @click.outside="cls = false"
             :aria-expanded="cls"
         >
-                            <span class="text-xs font-medium text-gray-600 uppercase mb-1">
+                            <span class="text-xs font-medium uppercase mb-1">
                 Cumulative Layout Shift
             </span>
 
@@ -209,19 +212,19 @@
                 x-show="cls"
                 x-transition
                 x-cloak
-                class="mt-2 text-xs text-gray-600 text-center"
+                class="mt-2 text-xs text-black text-center"
             >
                 How much the page layout shifts during loading.
             </div>
                         </div>
                         {# Speed Index #}
-                        <div x-data="{ si: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <div x-data="{ si: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
                         <button
-                class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
+                class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
                 @click="si = !si"
                 :aria-expanded="si"
             >
-                            <span class="text-xs font-medium text-gray-600 uppercase mb-1">
+                            <span class="text-xs font-medium uppercase mb-1">
                     Speed Index
                 </span>
 
@@ -234,7 +237,7 @@
                     x-show="si"
                     x-transition
                     x-cloak
-                    class="mt-2 text-xs text-gray-600 text-center"
+                    class="mt-2 text-xs text-black text-center"
                     @click.outside="si = false"
                 >
                     How quickly the contents of a page are visibly populated.
@@ -245,21 +248,19 @@
                 </div>
 
                 {# Desktop Metrics Section #}
-                <div class="mt-6">
+                  <div class="relative ml-8 space-y-4 justify-center lg:w-1/2 border">
                     <h4 class="text-lg font-bold mb-3">Desktop Metrics</h4>
-                    <p>Click on a metric for more information.</p>
-
-                    <div class="flex flex-wrap flex-col grid-cols-2 md:grid-cols-2 justify-center gap-4">
+                    <p>Click on a metric for additional details.</p>
 
                         {# First Contentful Paint #}
-                        <div x-data="{ fcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue  bg-white cursor-pointer">
+                        <div x-data="{ fcp: false }" class="flex flex-col items-center px-4 py-3 rounded-lg border border-solid border-primary-core-blue  bg-light-gray cursor-pointer">
                         <button
-            class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
+            class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="fcp = !fcp"
             @click.outside="fcp = false"
             :aria-expanded="fcp"
         >
-                            <span class="text-xs font-medium text-gray-600 uppercase mb-1">
+                            <span class="text-xs font-medium uppercase mb-1">
                 First Contentful Paint
             </span>
 
@@ -272,7 +273,7 @@
                 x-show="fcp"
                 x-transition
                 x-cloak
-                class="mt-2 text-xs text-gray-600 text-center"
+                class="mt-2 text-xs text-black text-center"
                 @click.outside="fcp = false"
             >
                 Time until the first piece of content is rendered on screen.
@@ -280,14 +281,14 @@
                         </div>
 
                         {# Largest Contentful Paint #}
-                        <div x-data="{ lcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <div x-data="{ lcp: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
                         <button
-            class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
+            class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="lcp = !lcp"
             @click.outside="lcp = false"
             :aria-expanded="lcp"
         >
-                            <span class="text-xs font-medium text-gray-600 uppercase mb-1">
+                            <span class="text-xs font-medium uppercase mb-1">
                 Largest Contentful Paint
             </span>
 
@@ -300,20 +301,20 @@
                 x-show="lcp"
                 x-transition
                 x-cloak
-                class="mt-2 text-xs text-gray-600 text-center"
+                class="mt-2 text-xs text-black text-center"
                 @click.outside="lcp = false"
             >
                 How long it takes for the largest visible element to load.
             </div>
                         </div>
                         {# Total Blocking Time #}
-                        <div x-data="{ tbt: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <div x-data="{ tbt: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
                         <button
-            class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
+            class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="tbt = !tbt"
             :aria-expanded="tbt"
         >
-                            <span class="text-xs font-medium text-gray-600 uppercase mb-1">
+                            <span class="text-xs font-medium uppercase mb-1">
                 Total Blocking Time
             </span>
 
@@ -326,20 +327,20 @@
                 x-show="tbt"
                 x-transition
                 x-cloak
-                class="mt-2 text-xs text-gray-600 text-center"
+                class="mt-2 text-xs text-black text-center"
                 @click.outside="tbt = false"
             >
                 How long it takes for the largest visible element to load.
             </div>
                         </div>
                         {# Cumulative Layout Shift #}
-                        <div x-data="{ cls: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <div x-data="{ cls: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
                         <button
-            class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
+            class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
             @click="cls = !cls"
             @click.outside="cls = false"
             :aria-expanded="cls">
-                            <span class="text-xs font-medium text-gray-600 uppercase mb-1">
+                            <span class="text-xs font-medium uppercase mb-1">
                 Cumulative Layout Shift
             </span>
 
@@ -352,21 +353,21 @@
                 x-show="cls "
                 x-transition
                 x-cloak
-                class="mt-2 text-xs text-gray-600 text-center"
+                class="mt-2 text-xs text-black text-center"
                 @click="cls = false"
             >
                 How much the page layout shifts during loading.
             </div>
                         </div>
                         {# Speed Index #}
-                        <div x-data="{ si: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer">
+                        <div x-data="{ si: false }" class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-light-gray cursor-pointer">
                         <button
-                class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue rounded-lg bg-white cursor-pointer"
+                class="flex flex-col items-center px-4 py-3 border border-solid border-primary-core-blue hover:bg-quaternary-blue hover:text-white rounded-lg bg-white cursor-pointer focus:border-solid focus:border-2 focus:border-yellow-500"
                 @click=" si = !si"
                 @click.outside="si = false"
                 :aria-expanded="si"
             >
-                            <span class="text-xs font-medium text-gray-600 uppercase mb-1">
+                            <span class="text-xs font-medium uppercase mb-1">
                     Speed Index
                 </span>
 
@@ -379,7 +380,7 @@
                     x-show="si"
                     x-transition
                     x-cloak
-                    class="mt-2 text-xs text-gray-600 text-center"
+                    class="mt-2 text-xs text-black text-center"
                     @click.outside="si = false"
                 >
                     How quickly the contents of a page are visibly populated.
@@ -393,7 +394,7 @@
             </div>
 
         {% endfor %}
-
+        </div>
     </section>
 
 {% elif params.type === "a11y-lighthouse" %}
